configs/_gclb_ingress/20-ingress-grpc.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wetsnow-grpc-ingress
  namespace: poker
  annotations:
    kubernetes.io/ingress.global-static-ip-name: global-grpc-ip0
    networking.gke.io/managed-certificates: wetsnow-grpc-certs
    kubernetes.io/ingress.class: "gce"
spec:
  backend:
    serviceName: pepper-poker-grpc-service
    servicePort: 8443
